[gd_scene format=3 uid="uid://ds5s0hurdsfsl"]

[ext_resource type="Script" uid="uid://cyl8vy8o3bgw1" path="res://player.gd" id="1_lrf8g"]
[ext_resource type="Script" uid="uid://cfgag7sk7m5gh" path="res://input.gd" id="2_kkys4"]
[ext_resource type="Script" uid="uid://d350u8evihs1u" path="res://addons/netfox/rollback/rollback-synchronizer.gd" id="3_p6lx1"]
[ext_resource type="Script" uid="uid://dour8fehaaugp" path="res://addons/netfox/tick-interpolator.gd" id="4_p6lx1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_myolf"]
albedo_color = Color(0.78039217, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_iluei"]
material = SubResource("StandardMaterial3D_myolf")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_a65ta"]

[sub_resource type="BoxShape3D" id="BoxShape3D_krxkm"]
size = Vector3(2.3551, 1.44415, 1.805176)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_u0j47"]
height = 1.70971
radius = 0.70492

[node name="Player" type="CharacterBody3D" unique_id=1382054450 groups=["red"]]
script = ExtResource("1_lrf8g")
team = "red"

[node name="MeshInstance3D" type="MeshInstance3D" parent="." unique_id=1742287663]
mesh = SubResource("CapsuleMesh_iluei")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1998143884]
shape = SubResource("CapsuleShape3D_a65ta")

[node name="CameraPivot" type="Node3D" parent="." unique_id=1128614254]

[node name="SpringArm3D" type="SpringArm3D" parent="CameraPivot" unique_id=441839989]
spring_length = 4.8

[node name="Camera3D" type="Camera3D" parent="CameraPivot/SpringArm3D" unique_id=1630288975]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0762882, 0.12344, 5.96464)

[node name="AreaKick" type="Area3D" parent="CameraPivot" unique_id=1020738393]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0116005, 0.0128472, -1.50681)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="CameraPivot/AreaKick" unique_id=1693749421]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0008513015, -0.19216, 0.5918629)
shape = SubResource("BoxShape3D_krxkm")

[node name="AreaDribble" type="Area3D" parent="CameraPivot" unique_id=1833094656]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00484848, 0.0122168, -1.5087)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="CameraPivot/AreaDribble" unique_id=786868515]
transform = Transform3D(1.72681, 0, 0, 0, 0.560255, 0, 0, 0, 1.19238, -0.00219905, -0.443847, 1.1596)
shape = SubResource("CylinderShape3D_u0j47")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=334057062]

[node name="ForceBar" type="ProgressBar" parent="CanvasLayer" unique_id=2020763701]
offset_left = 446.0
offset_top = 582.0
offset_right = 733.0
offset_bottom = 617.0
show_percentage = false

[node name="PlayerInput" type="Node" parent="." unique_id=67887638]
script = ExtResource("2_kkys4")

[node name="RollbackSynchronizer" type="Node" parent="." unique_id=2040425496 node_paths=PackedStringArray("root")]
script = ExtResource("3_p6lx1")
root = NodePath("..")
enable_prediction = true
state_properties = Array[String]([":global_position", ":velocity", ":is_charging", ":was_charging"])
input_properties = Array[String](["PlayerInput:movement_vector", "PlayerInput:jumping", "PlayerInput:sprinting", "PlayerInput:charging", "PlayerInput:action_type", "PlayerInput:aim_direction", "PlayerInput:look_yaw", "PlayerInput:look_pitch", "PlayerInput:jumping", "PlayerInput:firing"])
metadata/_custom_type_script = "uid://d350u8evihs1u"

[node name="TickInterpolator" type="Node" parent="." unique_id=537654614 node_paths=PackedStringArray("root")]
script = ExtResource("4_p6lx1")
root = NodePath("..")
properties = Array[String]([":global_position", ":quaternion"])
metadata/_custom_type_script = "uid://dour8fehaaugp"
